# mcp-memory-service

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_ENHANCEMENTS.md  UPSTREAM_INTEGRATION_SUMMARY.md  cli.py  code_intelligence_metrics.db  copy_code_intelligence.sh  debug_enhanced_server.py  extract_chromadb_data.py  import_clean_data.py  import_clean_data_resume.py  memory_wrapper_uv.py  pyproject.toml  requirements-code-intelligence.txt  test_auto_sync.py  test_claude_code_paths.py  upstream_integration_plan.md
chromadb/: chroma.sqlite3
debug/: FIX_REGISTRY.md  concurrent_users_architecture.md  concurrent_users_summary.md  fix_001_asyncio_create_task.md  fix_002_chromadb_timeout.md  fix_003_server_hang.md  fix_004_server_communication.md  fix_005_uv_path_issue.md  fix_006_database_health_check_hang.md  fix_007_duplicate_warnings_resolved.md  fix_008_chromadb_corruption_resolved.md  fix_008_chromadb_corruption_workaround.md  fix_009_async_repository_sync.md  fix_010_async_database_validation.md  fix_011_check_database_health_await.md  fix_012_async_sync_blocking.md  fix_013_async_repository_sync_complete.md  fix_014_auto_sync_status_check.md  fix_015_async_sync_solution.md  fix_015_code_intelligence_blocking.md  fix_015_concurrent_solution.md  fix_015_production_readiness.md  fix_016_async_sync_batching_solution.md  fix_017_claude_code_outside_directory.md  immediate_fixes_plan.md
docs/: AUTO_SYNC_IMPLEMENTATION.md  AUTO_SYNC_QUICK_START.md  CLAUDE_CODE_AUTO_SYNC_INTEGRATION.md  CONCURRENT_ACCESS_GUIDE.md  CONCURRENT_ACCESS_TROUBLESHOOTING.md  async-repository-sync-fix.md  auto-sync-file-discovery-fix.md  code-intelligence-concurrency.md  concurrent-access.md
docs/code_intelligence/: getting_started.md
docs/guides/: testing-code-intelligence.md  troubleshooting.md  windows-claude-desktop-setup.md
scripts/: analyze_duplicates.py  cleanup_duplicates.py  debug_sync.py  debug_sync_simple.py  extend_file_types.py  rebuild_database.py  test_sync_mcp.py
src/: code_intelligence_metrics.db
src/mcp_memory_service/: cli.py  enhanced_server.py  server.py
tests/: test_concurrent_access.py
(+27 files in other folders)
